--- a/docker/mssql.yml
+++ b/docker/mssql.yml
@@ -7,8 +7,8 @@ commands:
     description: ''
   - default: password
     displayName: SA_PASSWORD
-    description: 'is the database system administrator (userid = ''sa'') password
-      used to connect to SQL Server once the container is running. Important note:
+    description: "is the database system administrator (userid = \"sa\") password
+      used to connect to SQL Server once the container is running.\n\nImportant note:
       This password needs to include at least 8 characters of at least three of these
       four categories: uppercase letters, lowercase letters, numbers and non-alphanumeric
-      symbols.'
+      symbols."
